# bridge_deploy_g1

./: .clang-format  .gitignore
bridge_g1/: CMakeLists.txt  package.xml
bridge_g1/launch/: g1_mujoco.launch.py  g1_real.launch.py
bridge_g1/models/g1_baseline/: config.yaml
bridge_g1/models/g1_dreamwaq/: config.yaml
bridge_g1/models/g1_pie/: config.yaml
bridge_g1/rviz/: g1.rviz
bridge_g1/sdk/: CMakeLists.txt
bridge_g1/src/: g1_mujoco_node.cpp  g1_real_node.cpp
g1_description/: CMakeLists.txt  package.xml
g1_description/mjcf/: unitree_G1.xml
g1_description/xacro/: unitree_G1.xacro
